added rank checking code

--- a/python/billboard.ipynb
+++ b/python/billboard.ipynb
@@ -2717,6 +2717,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def prepare_chart_database_ranks(chart_database,artist):\n",
+    "    artist = normalize_str(artist)\n",
+    "    \"\"\" Modifies the database for a fast comparision\n",
+    "    \n",
+    "    Precalculate the value of every entry in each chart. \n",
+    "    The returned value for a no. 1 song is 100, the value of a no. 2 song is 99,\n",
+    "    etc., the value of a no. 100 song is 1. \n",
+    "    Normalize the song title and artist name of each chart entry.\n",
+    "    Save every chart entry as a list of tuples: (value, norm_title, norm_artist)\n",
+    "    The position information of the entry is still there because of its index. \n",
+    "    \"\"\"\n",
+    "   # prepared_chart_database = OrderedDict()\n",
+    "    xvals = []\n",
+    "    yvals = []\n",
+    "    for chart_date, chart in reversed(chart_database.items()):\n",
+    "        found = False\n",
+    "        for i,song in enumerate(chart):\n",
+    "            if(normalize_str(song.artist) == artist):\n",
+    "                if( i+1 <=5  and int(chart_date[5:7]) == 2 ):\n",
+    "                   print(f\"rank: {i+1}, date: {chart_date}\")\n",
+    "      \n",
+    "                found = True\n",
+    "                break\n",
+    "   \n",
+    "chart_database = pickle.load(open(\"artist-100-2018.pkl\", \"rb\")) \n",
+    "    # Rearrange items and normalise song titles and artist names.\n",
+    "for i in  [\"Rihanna\", \"Eminem\", \"Dr. Dre.\", \"Snoop Dogg\", \"Kendrick Lamar\", \"Mary J. Blige\", \"The Weeknd\",\"Shakira\", \"Jennifer Lopez\", \"Bad Bunny\", \"J Balvin\", \"Emme Muniz\", \"Maroon 5\",\"Travis Scott\", \"Big Boi\", \"Justin Timberlake\", \"The Tennessee Kids\"]:\n",
+    "    print(i)\n",
+    "    prepare_chart_database_ranks(chart_database,i)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
     "def plot_data_chart(min_year, max_year, title, data,artist):\n",
     "    years = list(range(min_year, max_year+1, 1))\n",
