added rank checking code

--- a/python/billboard.ipynb
+++ b/python/billboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,30 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-12-31\n"
-     ]
-    }
-   ],
-   "source": [
-    "chart = billboard.ChartData('artist-100',date=\"2023-01-04\")\n",
-    "print(previousdate(chart))\n",
-    "chart2 = billboard.ChartData('artist-100',date=previousdate(chart))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chart.title\n",
     "def previousdate(chart):\n",
     "    s = re.sub(r'[^0-9]', '',chart.date)\n",
     "    d = int(s[6:])\n",
@@ -64,27 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2023-02-04'"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "previousdate(chart)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2713,9 +2673,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rihanna\n",
+      "Eminem\n",
+      "rank: 1, date: 2020-02-01\n",
+      "rank: 3, date: 2020-02-08\n",
+      "rank: 5, date: 2020-02-22\n",
+      "rank: 4, date: 2022-02-26\n",
+      "Dr. Dre.\n",
+      "rank: 5, date: 2022-02-26\n",
+      "Snoop Dogg\n",
+      "Kendrick Lamar\n",
+      "rank: 4, date: 2018-02-24\n",
+      "Mary J. Blige\n",
+      "The Weeknd\n",
+      "rank: 2, date: 2021-02-06\n",
+      "rank: 4, date: 2021-02-13\n",
+      "rank: 2, date: 2021-02-20\n",
+      "rank: 2, date: 2021-02-27\n",
+      "rank: 2, date: 2022-02-05\n",
+      "rank: 1, date: 2022-02-12\n",
+      "rank: 1, date: 2022-02-19\n",
+      "rank: 1, date: 2022-02-26\n",
+      "rank: 5, date: 2023-02-04\n",
+      "Shakira\n",
+      "Jennifer Lopez\n",
+      "Bad Bunny\n",
+      "J Balvin\n",
+      "Emme Muniz\n",
+      "Maroon 5\n",
+      "Travis Scott\n",
+      "Big Boi\n",
+      "Justin Timberlake\n",
+      "rank: 1, date: 2018-02-17\n",
+      "rank: 2, date: 2018-02-24\n",
+      "The Tennessee Kids\n"
+     ]
+    }
+   ],
    "source": [
     "def prepare_chart_database_ranks(chart_database,artist):\n",
     "    artist = normalize_str(artist)\n",
@@ -2748,54 +2749,6 @@
     "    prepare_chart_database_ranks(chart_database,i)\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "def plot_data_chart(min_year, max_year, title, data,artist):\n",
-    "    years = list(range(min_year, max_year+1, 1))\n",
-    "    values = []\n",
-    "    for y in years:\n",
-    "        if y not in data:\n",
-    "            values.append(0)\n",
-    "        else:\n",
-    "            values.append(data[y])\n",
-    "    fig = plt.figure(1)\n",
-    "\n",
-    "    plt.plot(years, values, marker='o', label=artist) \n",
-    "    \n",
-    "    plt.ylim(None, 100)\n",
-    "    #plt.grid(True)\n",
-    "    plt.title(title)\n",
-    "    plt.xlabel('Year')\n",
-    "    plt.ylabel('Chart Ranking')\n",
-    "    #plt.legend(loc='upper left')\n",
-    "    \n",
-    "    fig.savefig(title + '.png', dpi = 300)\n",
-    "    \n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "testtsttsast\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(normalize_str(\"TEST_Ts-t_Tsast\"))"
    ]
   }
  ],
